--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,8 @@
-
 body {
-  background: #333333; }
+  padding: 0;
+  margin: 0;
+  background: #313236; }
+  body #map {
+    background: url(../../images/bg/bg-map.png); }
 
 /*# sourceMappingURL=main.css.map */
-
