--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,86 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
 
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+* {
+  -webkit-box-sizing: border-box;
+  -khtml-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box; }
+
+html {
+  height: 100%; }
+
+body {
+  height: 100%;
+  font-family: arial, sans-serif; }
+  body main {
+    height: 100%; }
+    body main [class*="container-"] {
+      height: 100%; }
+    body main #loader {
+      width: 100%;
+      height: 4px;
+      position: fixed;
+      top: 0;
+      display: block;
+      z-index: 1000; }
+      body main #loader .loader-content {
+        width: 20%;
+        height: 4px;
+        left: -16%;
+        background: #FF9C00;
+        position: absolute; }
+  body [class*="flash-"] {
+    width: 50%;
+    position: absolute;
+    top: 0;
+    left: 25%;
+    padding: 15px;
+    display: none;
+    text-align: center; }
+  body div.flash-errors {
+    background: #257383;
+    color: #ffffff; }
 
 /*# sourceMappingURL=main.css.map */
