--- a/app/views/summoner.html
+++ b/app/views/summoner.html
@@ -21,6 +21,12 @@
 	</div>
 
 	<section>
+		<ul>
+			<h1>TAMERE</h1>
+			<li ng-repeat="game in gamesResults">
+				<p>{{game.gameId}}</p>
+			</li>
+		</ul>
 		SummonerResult : 
 		{{summonerResult}}
 		<br>
