--- a/app/styles/summoner.css
+++ b/app/styles/summoner.css
@@ -1,11 +1,10 @@
 .animate-show.ng-hide-add, .animate-show.ng-hide-remove {
-  -webkit-transition: all linear 2s;
-  -khtml-transition: all linear 2s;
-  -moz-transition: all linear 2s;
-  -ms-transition: all linear 2s;
-  -o-transition: all linear 2s;
-  transition: all linear 2s;
-  display: block !important; }
+  -webkit-transition: all linear 0.5s;
+  -khtml-transition: all linear 0.5s;
+  -moz-transition: all linear 0.5s;
+  -ms-transition: all linear 0.5s;
+  -o-transition: all linear 0.5s;
+  transition: all linear 0.5s; }
 
 .animate-show.ng-hide-add.ng-hide-add-active, .animate-show.ng-hide-remove {
   filter: alpha(opacity=0);
