--- a/app/styles/sass/summoner.sass
+++ b/app/styles/sass/summoner.sass
@@ -81,7 +81,7 @@
 				display: inline-block
 				font-size: 8px
 
-			div.players
+			ul.players
 				width: 160px
 				height: 80px
 				float: right
