--- a/app/styles/summoner.css
+++ b/app/styles/summoner.css
@@ -1,115 +1,121 @@
-.container-summoner #summoner-form {
-  background: url(../../images/bg/bg-map.png);
-  min-height: 100%;
-  position: relative; }
-  .container-summoner #summoner-form form {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50%;
-    height: 5em; }
-    .container-summoner #summoner-form form input#summoner-name {
-      -webkit-transition: all ease 0.2s;
-      -khtml-transition: all ease 0.2s;
-      -moz-transition: all ease 0.2s;
-      -ms-transition: all ease 0.2s;
-      -o-transition: all ease 0.2s;
-      transition: all ease 0.2s;
-      margin: 0;
-      padding: 0;
-      border: none;
-      outline: none;
-      background: rgba(255, 255, 255, 0.2);
-      width: 82%;
-      height: 100%;
-      color: #ffffff;
+.container-summoner {
+  /**
+   * @see directives/fadeIn.js
+   */ }
+  .container-summoner .animate-show, .container-summoner .animate-show.ng-hide-add, .container-summoner .animate-show.ng-hide-remove {
+    -webkit-transition: all linear 0.5s;
+    -khtml-transition: all linear 0.5s;
+    -moz-transition: all linear 0.5s;
+    -ms-transition: all linear 0.5s;
+    -o-transition: all linear 0.5s;
+    transition: all linear 0.5s; }
+  .container-summoner .animate-show.ng-hide-add.ng-hide-add-active, .container-summoner .animate-show.ng-hide-remove, .container-summoner .animate-show.opacity-0 {
+    filter: alpha(opacity=0);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    -webkit-opacity: 0;
+    -khtml-opacity: 0;
+    -moz-opacity: 0;
+    -ms-opacity: 0;
+    -o-opacity: 0;
+    opacity: 0; }
+  .container-summoner .animate-show.ng-hide-add, .container-summoner .animate-show.ng-hide-remove.ng-hide-remove-active, .container-summoner .animate-show.opacity-1 {
+    filter: alpha(opacity=100);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    -webkit-opacity: 1;
+    -khtml-opacity: 1;
+    -moz-opacity: 1;
+    -ms-opacity: 1;
+    -o-opacity: 1;
+    opacity: 1; }
+  .container-summoner #summoner-form {
+    background: url(../../images/bg/bg-map.png);
+    min-height: 100%;
+    position: relative; }
+    .container-summoner #summoner-form form {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 50%;
+      height: 5em; }
+      .container-summoner #summoner-form form input#summoner-name {
+        -webkit-transition: all ease 0.2s;
+        -khtml-transition: all ease 0.2s;
+        -moz-transition: all ease 0.2s;
+        -ms-transition: all ease 0.2s;
+        -o-transition: all ease 0.2s;
+        transition: all ease 0.2s;
+        margin: 0;
+        padding: 0;
+        border: none;
+        outline: none;
+        background: rgba(255, 255, 255, 0.2);
+        width: 82%;
+        height: 100%;
+        color: #ffffff;
+        text-align: center;
+        vertical-align: top; }
+        .container-summoner #summoner-form form input#summoner-name:focus {
+          background: rgba(255, 255, 255, 0.3);
+          font-weight: 700; }
+      .container-summoner #summoner-form form button {
+        -webkit-transition: all ease 0.2s;
+        -khtml-transition: all ease 0.2s;
+        -moz-transition: all ease 0.2s;
+        -ms-transition: all ease 0.2s;
+        -o-transition: all ease 0.2s;
+        transition: all ease 0.2s;
+        width: 15%;
+        float: right;
+        background: #FF9C00;
+        font-size: 2em;
+        color: #ffffff;
+        border: none;
+        outline: none;
+        height: 100%;
+        cursor: pointer; }
+        .container-summoner #summoner-form form button:hover {
+          background: #257383; }
+  .container-summoner #summoner-history #match-history {
+    background: url(../../images/bg/bg-map.png);
+    width: 25%;
+    padding: 5px; }
+    .container-summoner #summoner-history #match-history h1 {
+      padding: 10px;
       text-align: center;
-      vertical-align: top; }
-      .container-summoner #summoner-form form input#summoner-name:focus {
-        background: rgba(255, 255, 255, 0.3);
-        font-weight: 700; }
-    .container-summoner #summoner-form form button {
-      -webkit-transition: all ease 0.2s;
-      -khtml-transition: all ease 0.2s;
-      -moz-transition: all ease 0.2s;
-      -ms-transition: all ease 0.2s;
-      -o-transition: all ease 0.2s;
-      transition: all ease 0.2s;
-      width: 15%;
-      float: right;
-      background: #FF9C00;
-      font-size: 2em;
-      color: #ffffff;
-      border: none;
-      outline: none;
-      height: 100%;
-      cursor: pointer; }
-      .container-summoner #summoner-form form button:hover {
-        background: #257383; }
-.container-summoner #stats-last-matchs {
-  background: url(../../images/bg/bg-map.png);
-  width: 25%;
-  padding: 5px; }
-  .container-summoner #stats-last-matchs h1 {
-    padding: 10px;
-    text-align: center;
-    color: #257383; }
-  .container-summoner #stats-last-matchs li {
-    overflow: hidden;
-    padding: 2px;
-    margin-bottom: 5px;
-    background: #FF9C00; }
-    .container-summoner #stats-last-matchs li:last-of-type {
-      margin-bottom: 0; }
-    .container-summoner #stats-last-matchs li div.imgs {
-      margin-right: 2px;
-      float: left; }
-      .container-summoner #stats-last-matchs li div.imgs img {
-        background: #257383; }
-      .container-summoner #stats-last-matchs li div.imgs img.champ {
-        display: flex;
-        width: 48px;
-        height: 48px; }
-      .container-summoner #stats-last-matchs li div.imgs img.spell {
-        margin-top: 2px;
-        width: 22px;
-        height: 22px; }
-    .container-summoner #stats-last-matchs li p {
-      display: inline-block;
-      font-size: 8px; }
-    .container-summoner #stats-last-matchs li div.players {
-      width: 160px;
-      height: 80px;
-      float: right;
-      border: 2px #257383 solid; }
-
-.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
-  -webkit-transition: all linear 0.5s;
-  -khtml-transition: all linear 0.5s;
-  -moz-transition: all linear 0.5s;
-  -ms-transition: all linear 0.5s;
-  -o-transition: all linear 0.5s;
-  transition: all linear 0.5s; }
-
-.animate-show.ng-hide-add.ng-hide-add-active, .animate-show.ng-hide-remove {
-  filter: alpha(opacity=0);
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  -webkit-opacity: 0;
-  -khtml-opacity: 0;
-  -moz-opacity: 0;
-  -ms-opacity: 0;
-  -o-opacity: 0;
-  opacity: 0; }
-
-.animate-show.ng-hide-add, .animate-show.ng-hide-remove.ng-hide-remove-active {
-  filter: alpha(opacity=100);
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  -webkit-opacity: 1;
-  -khtml-opacity: 1;
-  -moz-opacity: 1;
-  -ms-opacity: 1;
-  -o-opacity: 1;
-  opacity: 1; }
+      color: #257383; }
+    .container-summoner #summoner-history #match-history li {
+      overflow: hidden;
+      padding: 2px;
+      margin-bottom: 5px;
+      background: #FF9C00; }
+      .container-summoner #summoner-history #match-history li:last-of-type {
+        margin-bottom: 0; }
+      .container-summoner #summoner-history #match-history li div.imgs {
+        margin-right: 2px;
+        float: left; }
+        .container-summoner #summoner-history #match-history li div.imgs img {
+          background: #257383; }
+        .container-summoner #summoner-history #match-history li div.imgs img.champ {
+          display: flex;
+          width: 48px;
+          height: 48px; }
+        .container-summoner #summoner-history #match-history li div.imgs img.spell {
+          margin-top: 2px;
+          width: 22px;
+          height: 22px; }
+      .container-summoner #summoner-history #match-history li p {
+        display: inline-block;
+        font-size: 8px; }
+      .container-summoner #summoner-history #match-history li a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        cursor: pointer; }
+      .container-summoner #summoner-history #match-history li ul.players {
+        width: 160px;
+        height: 80px;
+        float: right;
+        border: 2px #257383 solid; }
 
 /*# sourceMappingURL=summoner.css.map */
