--- a/app/styles/sass/summoner.sass
+++ b/app/styles/sass/summoner.sass
@@ -56,9 +56,10 @@
 	
 	// Section match history
 	#summoner-history
+		display: inline-block
+		width: 30%
 		#match-history
 			background: url(../../images/bg/bg-map.png)
-			width: 25%
 			padding: 5px
 
 			h1
@@ -71,6 +72,7 @@
 				padding: 2px
 				margin-bottom: 5px
 				background: $mainColor
+				cursor: pointer
 				&:last-of-type
 					margin-bottom: 0
 
@@ -94,15 +96,14 @@
 					display: inline-block
 					font-size: 8px
 
-				a
-					display: block
-					width: 100%
-					height: 100%
-					cursor: pointer
 
 				ul.players
 					width: 160px
 					height: 80px
 					float: right
 					border: 2px $secondColor solid
+
+	#game
+		display: inline-block
+		width: 60%
 				
