--- a/app/styles/summoner.css
+++ b/app/styles/summoner.css
@@ -76,46 +76,47 @@
         cursor: pointer; }
         .container-summoner #summoner-form form button:hover {
           background: #257383; }
-  .container-summoner #summoner-history #match-history {
-    background: url(../../images/bg/bg-map.png);
-    width: 25%;
-    padding: 5px; }
-    .container-summoner #summoner-history #match-history h1 {
-      padding: 10px;
-      text-align: center;
-      color: #257383; }
-    .container-summoner #summoner-history #match-history li {
-      overflow: hidden;
-      padding: 2px;
-      margin-bottom: 5px;
-      background: #FF9C00; }
-      .container-summoner #summoner-history #match-history li:last-of-type {
-        margin-bottom: 0; }
-      .container-summoner #summoner-history #match-history li div.imgs {
-        margin-right: 2px;
-        float: left; }
-        .container-summoner #summoner-history #match-history li div.imgs img {
-          background: #257383; }
-        .container-summoner #summoner-history #match-history li div.imgs img.champ {
-          display: flex;
-          width: 48px;
-          height: 48px; }
-        .container-summoner #summoner-history #match-history li div.imgs img.spell {
-          margin-top: 2px;
-          width: 22px;
-          height: 22px; }
-      .container-summoner #summoner-history #match-history li p {
-        display: inline-block;
-        font-size: 8px; }
-      .container-summoner #summoner-history #match-history li a {
-        display: block;
-        width: 100%;
-        height: 100%;
+  .container-summoner #summoner-history {
+    display: inline-block;
+    width: 30%; }
+    .container-summoner #summoner-history #match-history {
+      background: url(../../images/bg/bg-map.png);
+      padding: 5px; }
+      .container-summoner #summoner-history #match-history h1 {
+        padding: 10px;
+        text-align: center;
+        color: #257383; }
+      .container-summoner #summoner-history #match-history li {
+        overflow: hidden;
+        padding: 2px;
+        margin-bottom: 5px;
+        background: #FF9C00;
         cursor: pointer; }
-      .container-summoner #summoner-history #match-history li ul.players {
-        width: 160px;
-        height: 80px;
-        float: right;
-        border: 2px #257383 solid; }
+        .container-summoner #summoner-history #match-history li:last-of-type {
+          margin-bottom: 0; }
+        .container-summoner #summoner-history #match-history li div.imgs {
+          margin-right: 2px;
+          float: left; }
+          .container-summoner #summoner-history #match-history li div.imgs img {
+            background: #257383; }
+          .container-summoner #summoner-history #match-history li div.imgs img.champ {
+            display: flex;
+            width: 48px;
+            height: 48px; }
+          .container-summoner #summoner-history #match-history li div.imgs img.spell {
+            margin-top: 2px;
+            width: 22px;
+            height: 22px; }
+        .container-summoner #summoner-history #match-history li p {
+          display: inline-block;
+          font-size: 8px; }
+        .container-summoner #summoner-history #match-history li ul.players {
+          width: 160px;
+          height: 80px;
+          float: right;
+          border: 2px #257383 solid; }
+  .container-summoner #game {
+    display: inline-block;
+    width: 60%; }
 
 /*# sourceMappingURL=summoner.css.map */
