--- a/app/styles/sass/summoner.sass
+++ b/app/styles/sass/summoner.sass
@@ -62,8 +62,8 @@
 				margin-bottom: 0
 
 			div.imgs
-				margin-right: 2px
 				float: left
+				margin-right: 2px
 				img
 					background: $secondColor
 					
@@ -81,8 +81,17 @@
 				display: inline-block
 				font-size: 8px
 
-			ul.players
+			div.players
+				padding: 2px
 				width: 160px
 				height: 80px
 				float: right
 				border: 2px $secondColor solid
+
+				ul
+					li
+						width: 50%
+						display: inline
+						p.firstteam
+
+						p.secondteam
