--- a/app/views/summoner.html
+++ b/app/views/summoner.html
@@ -21,11 +21,11 @@
 	<section id="summoner-history">
 		<ul id="match-history">
 			<h1>10 dernières Games</h1>
-			<li ng-repeat="(key, game) in gamesResults.games" data-game="{{game.gameId}}" show-game>
+			<li ng-repeat="(key, game) in gamesResults.games" data-game="{{game.gameId}}" data-mode="{{game.gameMode}}" data-timestamp="0" show-game>
 				<div class="imgs">
-					<img ng-src='http://ddragon.leagueoflegends.com/cdn/5.2.1/img/champion/{{avatars.data[game.championId].image.full}}' width="48px" height="48px" class="animate-show" fade-in>
-					<img ng-src='http://ddragon.leagueoflegends.com/cdn/5.2.1/img/spell/{{spells.data[game.spell1].image.full}}' width="24px" height="24px" class="animate-show" fade-in>
-					<img ng-src='http://ddragon.leagueoflegends.com/cdn/5.2.1/img/spell/{{spells.data[game.spell2].image.full}}' width="24px" height="24px" class="animate-show" fade-in>
+					<img ng-src='http://ddragon.leagueoflegends.com/cdn/5.8.1/img/champion/{{avatars.data[game.championId].image.full}}' width="48px" height="48px" class="animate-show" fade-in>
+					<img ng-src='http://ddragon.leagueoflegends.com/cdn/5.8.1/img/spell/{{spells.data[game.spell1].image.full}}' width="24px" height="24px" class="animate-show" fade-in>
+					<img ng-src='http://ddragon.leagueoflegends.com/cdn/5.8.1/img/spell/{{spells.data[game.spell2].image.full}}' width="24px" height="24px" class="animate-show" fade-in>
 				</div>
 				<p>{{game.subType}}</p>
 				<!-- <ul class="players">
@@ -50,8 +50,9 @@
 	</section>
 
 	<section id="game" class="animate-show opacity-0">
-		{{match}}
-		<div id="map">
+		<div id="map-game">
+		</div>
+		<div id="timeline">
 		</div>
 	</section>
 
