--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -89,6 +89,26 @@ body {
         left: -16%;
         background: #FF9C00;
         position: absolute; }
+    body main .tooltip {
+      color: #ffffff;
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.5); }
+      body main .tooltip:after {
+        content: "";
+        width: 0;
+        height: 0;
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        border-style: solid;
+        border-width: 5px 5px 0 5px;
+        border-color: rgba(0, 0, 0, 0.5) transparent transparent; }
+    body main .tooltip-map {
+      color: #ffffff;
+      padding: 10px;
+      background: rgba(0, 0, 0, 0.5); }
+    body main .clear {
+      clear: both; }
   body [class*="flash-"] {
     width: 50%;
     position: absolute;
