--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -52,6 +52,29 @@ body
 				background: $mainColor
 				position: absolute
 
+		.tooltip
+			color: #ffffff
+			padding: 20px
+			background: rgba(0,0,0,0.5)
+			&:after
+				content: ''
+				width: 0
+				height: 0
+				position: absolute
+				bottom: -5px
+				left: 0
+				border-style: solid
+				border-width: 5px 5px 0 5px
+				border-color: rgba(0,0,0,0.5) transparent transparent 
+
+		.tooltip-map
+			color: #ffffff
+			padding: 10px
+			background: rgba(0,0,0,0.5)
+
+		.clear
+			clear: both
+
 	[class*="flash-"]
 		width: 50%
 		position: absolute
