--- a/app/styles/sass/summoner.sass
+++ b/app/styles/sass/summoner.sass
@@ -3,6 +3,8 @@
 
 .container-summoner
 	background: url(../../images/bg/bg-map.png)
+	height: auto !important
+	min-height: 100%
 
 	/**
 	 * @see directives/fadeIn.js
@@ -16,12 +18,11 @@
 	
 	// Formulaire pour le nom du joueur
 	#summoner-form
-		min-height: 100%
-		position: relative	
+		+center(50%, 5em)
+		width: 50%
+		height: 5em
 
 		form
-			+center(50%, 5em)
-			width: 50%
 			height: 5em
 
 			input#summoner-name
@@ -107,7 +108,9 @@
 
 	#game
 		float: left
-		width: 60%
+		width: 70%
+		display: none
+		+opacity(0)
 
 		#timeline
 			background: #AAAAAA
@@ -123,4 +126,29 @@
 				cursor: pointer
 				display: inline-block
 				margin-right: 5px
+
+		#map-game
+			position: relative
+
+			circle
+				cursor: pointer
+
+		#match-resume
+			overflow: hidden
+
+			#first-team-resume
+				display: inline-block
+
+				ul
+					overflow: hidden
+					li
+						border-left: 4px solid #E25041
+
+			#second-team-resume
+				display: inline-block
+
+				ul
+					overflow: hidden
+					li
+						border-left: 4px solid #2C82C9
 				
