--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -76,19 +76,52 @@ body {
     height: 100%; }
     body main [class*="container-"] {
       height: 100%; }
-    body main #loader {
-      width: 100%;
-      height: 4px;
-      position: fixed;
-      top: 0;
-      display: block;
-      z-index: 1000; }
-      body main #loader .loader-content {
-        width: 20%;
-        height: 4px;
-        left: -16%;
-        background: #FF9C00;
-        position: absolute; }
+      body main [class*="container-"] #loader-content {
+        display: none;
+        background: rgba(0, 0, 0, 0.5);
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0; }
+        body main [class*="container-"] #loader-content #loader {
+          display: block;
+          width: 30px;
+          height: 30px;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          border: 4px solid #Fff;
+          animation: loader 2s infinite ease; }
+        body main [class*="container-"] #loader-content .loader-inner {
+          vertical-align: top;
+          display: inline-block;
+          width: 100%;
+          background-color: #fff;
+          animation: loader-inner 2s infinite ease-in; }
+@keyframes loader {
+  0% {
+    transform: rotate(0deg); }
+  25% {
+    transform: rotate(180deg); }
+  50% {
+    transform: rotate(180deg); }
+  75% {
+    transform: rotate(360deg); }
+  100% {
+    transform: rotate(360deg); } }
+@keyframes loader-inner {
+  0% {
+    height: 0%; }
+  25% {
+    height: 0%; }
+  50% {
+    height: 100%; }
+  75% {
+    height: 100%; }
+  100% {
+    height: 0%; } }
     body main .tooltip {
       color: #ffffff;
       padding: 20px;
