--- a/app/styles/sass/main.sass
+++ b/app/styles/sass/main.sass
@@ -36,21 +36,62 @@ body
 		height: 100%
 		[class*="container-"]
 			height: 100%
+			#loader-content
+				display: none
+				background: rgba(0,0,0,0.5)
+				position: fixed
+				top: 0
+				left: 0
+				right: 0
+				bottom: 0
+				#loader
+					display: block
+					width: 30px
+					height: 30px
+					+center(30px, 30px)
+					border: 4px solid #Fff
+					animation: loader 2s infinite ease
 
-		#loader
-			width: 100%
-			height: 4px
-			position: fixed
-			top: 0
-			display: block
-			z-index: 1000
-	
-			.loader-content
-				width: 20%
-				height: 4px
-				left: -16%
-				background: $mainColor
-				position: absolute
+				.loader-inner
+					vertical-align: top
+					display: inline-block
+					width: 100%
+					background-color: #fff
+					animation: loader-inner 2s infinite ease-in
+
+				@keyframes loader
+					0%
+						transform: rotate(0deg)
+
+					25%
+						transform: rotate(180deg)
+
+					50%
+						transform: rotate(180deg)
+
+					75%
+						transform: rotate(360deg)
+
+
+					100%
+						transform: rotate(360deg)
+				  
+
+				@keyframes loader-inner
+					0%
+						height: 0%
+
+					25%
+						height: 0%
+
+					50%
+						height: 100%
+
+					75%
+						height: 100%
+
+					100%
+						height: 0%
 
 		.tooltip
 			color: #ffffff
