--- a/app/styles/summoner.css
+++ b/app/styles/summoner.css
@@ -1,94 +1,3 @@
-<<<<<<< HEAD
-.container-summoner #summoner-form {
-  background: url(../../images/bg/bg-map.png);
-  min-height: 100%;
-  position: relative; }
-  .container-summoner #summoner-form form {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50%;
-    height: 5em; }
-    .container-summoner #summoner-form form input#summoner-name {
-      -webkit-transition: all ease 0.2s;
-      -khtml-transition: all ease 0.2s;
-      -moz-transition: all ease 0.2s;
-      -ms-transition: all ease 0.2s;
-      -o-transition: all ease 0.2s;
-      transition: all ease 0.2s;
-      margin: 0;
-      padding: 0;
-      border: none;
-      outline: none;
-      background: rgba(255, 255, 255, 0.2);
-      width: 82%;
-      height: 100%;
-      color: #ffffff;
-      text-align: center;
-      vertical-align: top; }
-      .container-summoner #summoner-form form input#summoner-name:focus {
-        background: rgba(255, 255, 255, 0.3);
-        font-weight: 700; }
-    .container-summoner #summoner-form form button {
-      -webkit-transition: all ease 0.2s;
-      -khtml-transition: all ease 0.2s;
-      -moz-transition: all ease 0.2s;
-      -ms-transition: all ease 0.2s;
-      -o-transition: all ease 0.2s;
-      transition: all ease 0.2s;
-      width: 15%;
-      float: right;
-      background: #FF9C00;
-      font-size: 2em;
-      color: #ffffff;
-      border: none;
-      outline: none;
-      height: 100%;
-      cursor: pointer; }
-      .container-summoner #summoner-form form button:hover {
-        background: #257383; }
-.container-summoner #stats-last-matchs {
-  background: url(../../images/bg/bg-map.png);
-  width: 25%;
-  padding: 5px; }
-  .container-summoner #stats-last-matchs h1 {
-    padding: 10px;
-    text-align: center;
-    color: #257383; }
-  .container-summoner #stats-last-matchs li {
-    overflow: hidden;
-    padding: 2px;
-    margin-bottom: 5px;
-    background: #FF9C00; }
-    .container-summoner #stats-last-matchs li:last-of-type {
-      margin-bottom: 0; }
-    .container-summoner #stats-last-matchs li div.imgs {
-      float: left;
-      margin-right: 2px; }
-      .container-summoner #stats-last-matchs li div.imgs img {
-        background: #257383; }
-      .container-summoner #stats-last-matchs li div.imgs img.champ {
-        display: flex;
-        width: 48px;
-        height: 48px; }
-      .container-summoner #stats-last-matchs li div.imgs img.spell {
-        margin-top: 2px;
-        width: 22px;
-        height: 22px; }
-    .container-summoner #stats-last-matchs li p {
-      display: inline-block;
-      font-size: 8px; }
-    .container-summoner #stats-last-matchs li div.players {
-      padding: 2px;
-      width: 160px;
-      height: 80px;
-      float: right;
-      border: 2px #257383 solid; }
-      .container-summoner #stats-last-matchs li div.players ul li {
-        width: 50%;
-        display: inline; }
-=======
 .container-summoner {
   /**
    * @see directives/fadeIn.js
@@ -185,30 +94,45 @@
         cursor: pointer; }
         .container-summoner #summoner-history #match-history li:last-of-type {
           margin-bottom: 0; }
+        .container-summoner #summoner-history #match-history li div {
+          display: inline-block; }
         .container-summoner #summoner-history #match-history li div.imgs {
-          margin-right: 2px;
-          float: left; }
+          float: left;
+          margin-right: 5px; }
           .container-summoner #summoner-history #match-history li div.imgs img {
             background: #257383; }
           .container-summoner #summoner-history #match-history li div.imgs img.champ {
             display: flex;
-            width: 48px;
-            height: 48px; }
+            width: 55px;
+            height: 55px; }
           .container-summoner #summoner-history #match-history li div.imgs img.spell {
-            margin-top: 2px;
-            width: 22px;
-            height: 22px; }
-        .container-summoner #summoner-history #match-history li p {
-          display: inline-block;
-          font-size: 8px; }
-        .container-summoner #summoner-history #match-history li ul.players {
-          width: 160px;
-          height: 80px;
+            margin-top: 5px;
+            width: 25px;
+            height: 25px; }
+          .container-summoner #summoner-history #match-history li div.imgs p {
+            display: inline-block;
+            font-size: 8px; }
+        .container-summoner #summoner-history #match-history li div.scoreAndItems {
+          padding: 2px;
+          float: center; }
+          .container-summoner #summoner-history #match-history li div.scoreAndItems p {
+            padding-bottom: 3px; }
+        .container-summoner #summoner-history #match-history li div.players {
+          padding: 2px;
           float: right;
-          border: 2px #257383 solid; }
+          width: 160px;
+          height: 80px; }
+          .container-summoner #summoner-history #match-history li div.players ul li {
+            width: 50%;
+            display: inline-block;
+            margin-bottom: 2px;
+            padding: 0px; }
+            .container-summoner #summoner-history #match-history li div.players ul li p {
+              width: 100%;
+              text-align: center;
+              font-size: 8px; }
   .container-summoner #game {
     display: inline-block;
     width: 60%; }
->>>>>>> 1eeb5f5638f5605feaf288a5b076d8f822a948c4
 
 /*# sourceMappingURL=summoner.css.map */
