--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,6 @@
 <div id="map">
+  <h1>Player of Legends</h1>
+  <p>Sélectionner votre pays</p>
 	<div id="svg-container"></div>
 </div>
 <!-- <div id="loader">
