--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,4 @@
+@import url("http://fonts.googleapis.com/css?family=Basic");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -53,7 +54,7 @@ html {
 
 body {
   height: 100%;
-  font-family: arial, sans-serif; }
+  font-family: "Basic", arial, sans-serif; }
   body .ng-scope {
     height: 100%;
     width: 100%; }
@@ -63,6 +64,16 @@ body {
       background: url(../../images/bg/bg-map.png);
       position: relative;
       display: table; }
+      body .ng-scope #map h1 {
+        color: white;
+        text-align: center;
+        font-size: 48px;
+        font-family: "Basic";
+        margin: 20px auto; }
+      body .ng-scope #map p {
+        text-align: center;
+        color: white;
+        font-family: 16px; }
       body .ng-scope #map #svg-container {
         width: 1013px;
         height: 669px;
