--- a/app/styles/summoner.css
+++ b/app/styles/summoner.css
@@ -39,6 +39,10 @@
     height: 5em; }
     .container-summoner #summoner-form form {
       height: 5em; }
+      .container-summoner #summoner-form form p {
+        color: white;
+        font-size: 16px;
+        margin: 10px auto; }
       .container-summoner #summoner-form form input#summoner-name {
         -webkit-transition: all ease 0.2s;
         -khtml-transition: all ease 0.2s;
@@ -79,7 +83,7 @@
           background: #257383; }
   .container-summoner #summoner-history {
     float: left;
-    width: 30%;
+    width: 325px;
     display: none;
     filter: alpha(opacity=0);
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
@@ -100,7 +104,12 @@
         padding: 2px;
         margin-bottom: 5px;
         background: #FF9C00;
-        cursor: pointer; }
+        cursor: pointer;
+        position: relative; }
+        .container-summoner #summoner-history #match-history li.blue {
+          border-right: 4px solid #2C82C9; }
+        .container-summoner #summoner-history #match-history li.red {
+          border-right: 4px solid #E25041; }
         .container-summoner #summoner-history #match-history li:last-of-type {
           margin-bottom: 0; }
         .container-summoner #summoner-history #match-history li div.imgs {
@@ -118,7 +127,15 @@
             height: 22px; }
         .container-summoner #summoner-history #match-history li p {
           display: inline-block;
-          font-size: 8px; }
+          font-size: 16px;
+          margin: 0 10px;
+          position: absolute; }
+          .container-summoner #summoner-history #match-history li p strong {
+            font-weight: bold; }
+        .container-summoner #summoner-history #match-history li p.game-score {
+          bottom: 25px; }
+        .container-summoner #summoner-history #match-history li p.game-type {
+          bottom: 5px; }
         .container-summoner #summoner-history #match-history li ul.players {
           width: 160px;
           height: 80px;
@@ -128,7 +145,6 @@
     float: left;
     width: 70%; }
     .container-summoner #game #timeline {
-      background: #AAAAAA;
       height: 3px;
       line-height: 3px;
       margin-top: 15px; }
@@ -141,23 +157,49 @@
         cursor: pointer;
         display: inline-block;
         margin-right: 5px; }
+        .container-summoner #game #timeline .timeline-point:hover {
+          background: #FF9C00; }
     .container-summoner #game #map-game {
-      position: relative; }
+      position: relative;
+      text-align: center; }
       .container-summoner #game #map-game circle {
         cursor: pointer; }
+    .container-summoner #game #timeline {
+      text-align: center; }
     .container-summoner #game #match-resume {
-      overflow: hidden; }
+      text-align: center; }
+      .container-summoner #game #match-resume h1 {
+        font-size: 16px;
+        color: white;
+        margin: 15px 5px;
+        text-align: left; }
+      .container-summoner #game #match-resume .vs {
+        font-size: 20px;
+        color: white;
+        display: inline-block;
+        height: 48px;
+        line-height: 48px;
+        vertical-align: bottom; }
       .container-summoner #game #match-resume #first-team-resume {
-        display: inline-block; }
+        display: inline-block;
+        border-right: 4px solid #2C82C9;
+        height: 48px; }
         .container-summoner #game #match-resume #first-team-resume ul {
           overflow: hidden; }
           .container-summoner #game #match-resume #first-team-resume ul li {
-            border-left: 4px solid #E25041; }
+            display: inline-block;
+            float: left;
+            height: auto;
+            width: auto; }
       .container-summoner #game #match-resume #second-team-resume {
-        display: inline-block; }
+        display: inline-block;
+        border-left: 4px solid #E25041;
+        height: 48px; }
         .container-summoner #game #match-resume #second-team-resume ul {
           overflow: hidden; }
           .container-summoner #game #match-resume #second-team-resume ul li {
-            border-left: 4px solid #2C82C9; }
+            display: inline-block;
+            height: auto;
+            width: auto; }
 
 /*# sourceMappingURL=summoner.css.map */
