--- a/app/views/summoner.html
+++ b/app/views/summoner.html
@@ -22,7 +22,7 @@
 	<section id="summoner-history">
 		<ul id="match-history">
 			<h1>10 dernières parties</h1>
-			<li ng-repeat="(key, game) in gamesResults.games" data-game="{{game.gameId}}" data-mode="{{game.gameMode}}" data-timestamp="0" ng-class="{red: game.teamId == '200', blue: game.teamId =='100'}" show-game>
+			<li ng-repeat="(key, game) in gamesResults.games" data-game="{{game.gameId}}" data-mode="{{game.gameMode}}" data-timestamp="0" ng-class="{red: game.teamId == '200', blue: game.teamId =='100', active: $index == selected}" ng-click="select(key)" show-game>
 				<div ng-if="game.stats.win == true">Victoire</div>
 				<div ng-if="game.stats.win == false">Défaite</div>
 				<div class="imgs">
@@ -38,7 +38,7 @@
 						 / 
 						<span ng-if="game.stats.numDeaths">{{game.stats.numDeaths}} </span>
 						<span ng-if="!game.stats.numDeaths">0</span>
-						 / 
+						 / xœ
 						<span ng-if="game.stats.assists">{{game.stats.assists}} </span>
 						<span ng-if="!game.stats.assists">0</span>
 					</p>
